# theridion

./: .gitignore  AGENTS.md  LICENSE
.codex/agents/: backend-vyvojar.toml  brand-designer.toml  business-analytik.toml  copywriter.toml  devops-inzenyr.toml  frontend-vyvojar.toml  marketer.toml  mobilni-vyvojar.toml  produktovy-manazer.toml  projektovy-manazer.toml  qa-tester.toml  security-specialista.toml  softwarovy-architekt.toml  ui-designer.toml  ux-designer.toml  web-designer.toml
apps/desktop/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  sidecar.rs
apps/desktop/src/components/: ActivityBar.tsx  BatchRunnerModal.tsx  CodeEditor.tsx  CodegenModal.tsx  CollectionStatsModal.tsx  CommandPalette.tsx  ContextMenu.tsx  CurlImportModal.tsx  EnvDropdown.tsx  EnvManagerModal.tsx  GraphQLModal.tsx  GrpcModal.tsx  HistoryPanel.tsx  ImportModal.tsx  JsonView.tsx  MockServerModal.tsx  MonitorsModal.tsx  MultiEnvModal.tsx  NetworkConsole.tsx  OAuth2FlowModal.tsx  RequestDiffModal.tsx  RequestPanel.tsx  Sidebar.tsx  (+10 more)
docs/: ai-test-generation.md  claude-desktop-config.example.json  landing-page.html  qa-test-coverage-audit.md  security-audit-2026-05-12.md
docs/marketing/: marketing-strategy.md
docs/product/: feature-proposals-2026.md  product-vision.md
docs/ux/: advanced-features-ux.md
(+24 files in other folders)
