[package]
name = "theridion"
version = "0.0.1"
description = "Theridion — modern API testing platform"
authors = ["Tomáš Mertin <tomas.mertin@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "theridion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
